# maze-solver

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  __main__.py  constants.py  main_window.py  maze.py  my_qlabel.py  pyproject.toml  pytest.ini  resource.py  save_window.py  settings_window.py  setup.cfg  test_maze.py
.github/workflows/: ci.yml
forms/: __init__.py  maze_generator_window.py  maze_save_window.py  maze_settings_window.py
mase_solver/: __main__.py  constants.py  stack.py
mase_solver/forms/: maze_save_window.py  maze_settings_window.py
mase_solver/qt/: maze_generator.ui  maze_settings.ui  resource.qrc
mase_solver/widgets/: my_qlabel.py
mase_solver/windows/: save_window.py
maze_solver/: __main__.py  constants.py  maze.py  point.py  stack.py
maze_solver/forms/: __init__.py  maze_generator_window.py  maze_save_window.py  maze_settings_window.py  resource.py
maze_solver/qt/: maze_generator.ui  maze_save.ui  maze_settings.ui  resource.qrc
maze_solver/widgets/: __init__.py  my_qlabel.py
maze_solver/windows/: __init__.py  main_window.py  save_window.py  settings_window.py
mazes/: maze_txt.txt
qt/: maze_save.ui
tests/: test_maze.py
widgets/: __init__.py
windows/: __init__.py  main_window.py  settings_window.py
