[tool.poetry]
name = "lab_7"
version = "0.1.0"
description = ""
authors = ["ZZaRRyaDD <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "5.10.1"
pytest-mock = "3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
