[tool.poetry]
name = "maze_solver"
version = "0.1.0"
description = ""
authors = ["ZZaRRyaDD <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "5.15.7"
Pillow = "9.3.0"

flake8 = {version = "6.0.0", optional = true}
flake8-isort = {version = "5.0.3", optional = true}
pytest-mock = {version = "3.7.0", optional = true}

[tool.poetry.extras]
dev = [
    "flake8",
    "flake8-isort",
    "pytest-mock",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
